compiler/testData/diagnostics/tests/smartCasts/variables/assignment.kt
fun foo() {
    var v: Any
    v = "abc"
    v = 42
    v.<!UNRESOLVED_REFERENCE!>length<!>()
}
